--- a/.github/workflows/elysia-request-id-publish.yml
+++ b/.github/workflows/elysia-request-id-publish.yml
@@ -23,5 +23,5 @@ jobs:
         uses: pnpm/action-setup@v2
         with:
           version: 8
-      - run: pnpm install
+      - run: pnpm install --frozen-lockfile
       - run: pnpm dlx jsr publish
